--- a/card-element.html
+++ b/card-element.html
@@ -1,13 +1,30 @@
-<link rel="import" href="../polymer/polymer-element.html">
+<link rel="import" href="./bower_components/polymer/polymer-element.html">
 
 <dom-module id="card-element">
   <template>
     <style>
       :host {
         display: block;
+        box-shadow: 0px 0px 4px 4px #ecf0f1;
+        border-radius: 5px;
+      }
+
+      :host>.card-content {
+        padding: 8px;
+      }
+
+      :host>img {
+        width: 100%;
+      }
+
+      :host:hover {
+        box-shadow: 0px 0px 4px 5px #ecf0f1;
       }
     </style>
-    <h2>Hello [[prop1]]!</h2>
+    <img src="[[image]]" alt="card-image ">
+    <div class="card-content">
+      <h3>[[title]]</h3>
+    </div>
   </template>
 
   <script>
@@ -26,6 +43,12 @@
           name: {
             type: String,
             value: 'card-element'
+          },
+          title: {
+            type: String
+          },
+          image: {
+            type: String
           }
         };
       }
