Display the content inside the card tag :hammer:

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,10 +21,11 @@
 
 <body>
   <div class="vertical-section-container centered">
-    <h3>Basic card-element demo</h3>
+    <h3>Basic card-element</h3>
     <demo-snippet>
       <template>
-        <card-element title="Ameer" image="./images/dance.jpg">
+        <card-element title="Card Title" image="./images/dance.jpg">
+          <p>Something about the card</p>
         </card-element>
       </template>
     </demo-snippet>
