--- a/card-element.html
+++ b/card-element.html
@@ -10,7 +10,7 @@
       }
 
       :host>.card-content {
-        padding: 8px;
+        padding: 10px;
       }
 
       :host>img {
@@ -24,9 +24,9 @@
     <img src="[[image]]" alt="card-image ">
     <div class="card-content">
       <h3>[[title]]</h3>
+      <slot></slot>
     </div>
   </template>
-
   <script>
     /**
      * `card-element`
